--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,11 @@
             <scope>compile</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -123,9 +128,7 @@
                         <version>${kotlin.version}</version>
                     </dependency>
                 </dependencies>
-
             </plugin>
-
         </plugins>
     </build>
 
