--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ management.endpoints.web.exposure.include=*
 
 spring.servlet.multipart.max-file-size=1024KB
 spring.servlet.multipart.max-request-size=1024KB
+
+logging.level.root=info
