--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.servlet.multipart.max-file-size=1024KB
 spring.servlet.multipart.max-request-size=1024KB
 
 logging.level.root=info
+
+spring.profiles.include=local
+#spring.profiles.include=amazon
